complete all task
