# controller/products_controller.go
@@ -44,6 +44,8 @@ func GetAllProduct(c *gin.Context) {
 // @Description Creating a new Products.
 // @Tags Products
 // @Param Body body productInput true "the body to create a new Products"
+// @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
+// @Security BearerToken
 // @Produce json
 // @Success 200 {object} models.Products
 // @Router /product [post]
@@ -95,6 +97,8 @@ func GetProductById(c *gin.Context) { // Get model if exist
 // @Summary Update Product.
 // @Description Update Product by id.
 // @Tags Products
+// @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
+// @Security BearerToken
 // @Produce json
 // @Param id path string true "Product id"
 // @Param Body body productInput true "the body to update product"
@@ -137,6 +141,8 @@ func UpdateProduct(c *gin.Context) {
 // @Summary Delete one Product.
 // @Description Delete a Product by id.
 // @Tags Products
+// @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
+// @Security BearerToken
 // @Produce json
 // @Param id path string true "Product id"
 // @Success 200 {object} map[string]boolean
