# docs/swagger.yaml
@@ -1,4 +1,14 @@
 definitions:
+  controller.LoginInput:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    required:
+    - password
+    - username
+    type: object
   controller.commentInput:
     properties:
       comment:
@@ -217,6 +227,11 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/controller.commentInput'
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -224,6 +239,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.Comments'
+      security:
+      - BearerToken: []
       summary: Create New Comment.
       tags:
       - Comments
@@ -231,6 +248,11 @@ paths:
     delete:
       description: Delete a Comment by id.
       parameters:
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: id
         in: path
         name: id
@@ -245,12 +267,19 @@ paths:
             additionalProperties:
               type: boolean
             type: object
+      security:
+      - BearerToken: []
       summary: Delete one Comment.
       tags:
       - Comment
     patch:
       description: Update Comment by id.
       parameters:
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: id
         in: path
         name: id
@@ -269,6 +298,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.Comments'
+      security:
+      - BearerToken: []
       summary: Update Comment.
       tags:
       - Comments
@@ -297,6 +328,11 @@ paths:
     get:
       description: Get an Comment by UserIdComment.
       parameters:
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User id comment
         in: path
         name: id
@@ -309,6 +345,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.Comments'
+      security:
+      - BearerToken: []
       summary: Get comment.
       tags:
       - Comments
@@ -336,6 +374,11 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/controller.productInput'
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -343,6 +386,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.Products'
+      security:
+      - BearerToken: []
       summary: Create New Product.
       tags:
       - Products
@@ -350,6 +395,11 @@ paths:
     delete:
       description: Delete a Product by id.
       parameters:
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Product id
         in: path
         name: id
@@ -364,6 +414,8 @@ paths:
             additionalProperties:
               type: boolean
             type: object
+      security:
+      - BearerToken: []
       summary: Delete one Product.
       tags:
       - Products
@@ -388,6 +440,11 @@ paths:
     patch:
       description: Update Product by id.
       parameters:
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Product id
         in: path
         name: id
@@ -406,6 +463,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.Products'
+      security:
+      - BearerToken: []
       summary: Update Product.
       tags:
       - Products
@@ -433,6 +492,11 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/controller.promotionInput'
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -440,6 +504,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.Promotion'
+      security:
+      - BearerToken: []
       summary: Create New Promotion.
       tags:
       - Promotion
@@ -447,6 +513,11 @@ paths:
     delete:
       description: Delete a Promotion by id.
       parameters:
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User id
         in: path
         name: id
@@ -461,12 +532,19 @@ paths:
             additionalProperties:
               type: boolean
             type: object
+      security:
+      - BearerToken: []
       summary: Delete one Promotion.
       tags:
       - Promotion
     get:
       description: Get a promo by id.
       parameters:
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User id
         in: path
         name: id
@@ -479,12 +557,19 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.Promotion'
+      security:
+      - BearerToken: []
       summary: Get promo.
       tags:
       - Promotion
     patch:
       description: Update User by id.
       parameters:
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User id
         in: path
         name: id
@@ -503,6 +588,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.Promotion'
+      security:
+      - BearerToken: []
       summary: Update Active Promo.
       tags:
       - Promotion
@@ -516,6 +603,11 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/controller.transactionInput'
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -523,6 +615,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.Transaction'
+      security:
+      - BearerToken: []
       summary: Create New Transaction.
       tags:
       - Transaction
@@ -530,6 +624,11 @@ paths:
     get:
       description: Get an Transaction by userId.
       parameters:
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User id
         in: path
         name: id
@@ -542,6 +641,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.Transaction'
+      security:
+      - BearerToken: []
       summary: Get transaction.
       tags:
       - Transaction
@@ -549,6 +650,11 @@ paths:
     get:
       description: Get a list of transaction.
       parameters:
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: user id
         in: path
         name: id
@@ -563,6 +669,8 @@ paths:
             items:
               $ref: '#/definitions/models.Transaction'
             type: array
+      security:
+      - BearerToken: []
       summary: Get all Transaction By UserId.
       tags:
       - Transaction
@@ -570,6 +678,11 @@ paths:
     delete:
       description: Delete a User by user id.
       parameters:
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User id
         in: path
         name: id
@@ -584,9 +697,32 @@ paths:
             additionalProperties:
               type: boolean
             type: object
+      security:
+      - BearerToken: []
       summary: Delete one Trannsaction.
       tags:
       - Transaction
+  /user/login:
+    post:
+      description: Logging in to get jwt token to access admin or user api by roles.
+      parameters:
+      - description: the body to login a user
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/controller.LoginInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Login as as user.
+      tags:
+      - Auth
   /users:
     get:
       description: Get a list of Users.
@@ -602,29 +738,15 @@ paths:
       summary: Get all Users.
       tags:
       - Users
-    post:
-      description: Creating a new User.
-      parameters:
-      - description: the body to create a new users
-        in: body
-        name: Body
-        required: true
-        schema:
-          $ref: '#/definitions/controller.userInput'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.User'
-      summary: Create New User.
-      tags:
-      - User
   /users/{id}:
     delete:
       description: Delete a User by id.
       parameters:
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User id
         in: path
         name: id
@@ -639,12 +761,19 @@ paths:
             additionalProperties:
               type: boolean
             type: object
+      security:
+      - BearerToken: []
       summary: Delete one User.
       tags:
       - User
     get:
       description: Get an User by id.
       parameters:
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User id
         in: path
         name: id
@@ -657,12 +786,19 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.User'
+      security:
+      - BearerToken: []
       summary: Get user.
       tags:
       - User
     patch:
       description: Update User by id.
       parameters:
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User id
         in: path
         name: id
@@ -681,7 +817,29 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.User'
+      security:
+      - BearerToken: []
       summary: Update User.
+      tags:
+      - User
+  /users/registrasi:
+    post:
+      description: Creating a new User.
+      parameters:
+      - description: the body to create a new users
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/controller.userInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+      summary: Create New User.
       tags:
       - User
 swagger: "2.0"
